# Alicorn0

./: .editorconfig  .emmyrc.json  .envrc  .git-blame-ignore-revs  .gitignore  .lua-format  .luarc.json  .nvimrc  .styluaignore  Cargo.toml  README.md  REUSE.toml  alicorn-evaluator.lua  alicorn-expressions.lua  alicorn-runner.lua  alicorn-smoketest.lua  alicorn-utils.lua  backend-builder.lua  base-env.lua  basic-operators.lua  basic-types.lua  build.rs  core-operatives.lua  cotuple.lua  derive-as.lua  derive-eq.lua  derivers.lua  desugar.lua  environment.lua  evaluator-types.lua  evaluator.lua  fibonacci-buffer.lua  fitsinto.lua  flake.nix  format-adapter.lua  format.lua  fullsyntaxtest.lua  getopt.lua  glsl-prelude.alc  glsl-print.lua  (+55 more)
.github/workflows/: nix-flake-check.yml  nix-flake-status.sh
.nvim/: README.md
.nvim/lua/: nvim-project-alicorn.lua  nvim-treesitter-quickfix.lua
.nvim/plugin/: project-alicorn.lua
.nvim/queries/lua/: refactored_functions.scm  tail_calls.scm
_meta/alicorn-utils/: notail.lua
_meta/evaluator/: UniverseOmegaRelation.lua  apply_value.lua  evaluate.lua  gather_usages.lua  infer.lua  infer_tuple_type_unwrapped2.lua  substitute_inner.lua
_meta/reducer-utils/: accept_bundled.lua  unpack_bundle.lua
_meta/runtest/: execute_module_forest.lua
host-tests/: alicorn-smoketest.lua  metalanguage-smoketest.lua  test-derive-eq.lua  test-derive-pretty-print.lua  test-eval.lua  test-fitsinto.lua  test-map-array.lua  test-pretty-print.lua  test-syntax-to-terms-to-eval.lua  test-terms.lua  test-traits.lua  test-util.lua  test.lua
libs/: abstract-codegen.lua  dkjson.lua  sandbox.lua
nix/fe/fetchLitDeps/: nixpkgs-package.nix
nix/fetchLitDeps/: default.nix
nix/lu/luvi/: nixpkgs-package.nix
nix/lu/luvi-prefix/: nixpkgs-package.nix
nix/lu/luvi/_patches/: 0001-CMake-non-internal-RPATH-cache-variables.patch  0002-Respect-provided-CMAKE_INSTALL_RPATH.patch
nix/lu/luvit/: nixpkgs-overlay.nix  nixpkgs-package.nix
nix/lu/luvit-lit/: nixpkgs-package.nix
nix/luvi/: default.nix
nix/luvi/_patches/: 0001-CMake-non-internal-RPATH-cache-variables.patch  0002-Respect-provided-CMAKE_INSTALL_RPATH.patch
nix/luvit/: default.nix
nix/luvit-lit/: default.nix
nix/ma/makeLitPackage/: nixpkgs-package.nix
nix/makeLitPackage/: default.nix
nix/wr/writeLuvi/: nixpkgs-package.nix
nix/wr/writeLuviBin/: nixpkgs-package.nix
nvim-site/: README.md
nvim-site/lua/: treesitter-quickfix.lua
nvim-site/plugin/dap/: alicorn.lua
nvim-site/queries/lua/: refactored_functions.scm  tail_calls.scm
rust/uniffi/: .editorconfig
rust/uniffi/crates/uniffi-alicorn/: Cargo.toml
rust/uniffi/crates/uniffi-alicorn/src/: cli.rs  lib.rs
rust/uniffi/crates/uniffi-alicorn/src/cli/: swift.rs  uniffi_bindgen.rs
rust/uniffi/crates/uniffi-bindgen-alicorn/: Cargo.toml  rinja.toml
rust/uniffi/crates/uniffi-bindgen-alicorn/src/: bindings.rs  lib.rs
rust/uniffi/crates/uniffi-bindgen-alicorn/src/bindings/alicorn/: code_types.rs  gen.rs  mod.rs  test.rs
rust/uniffi/crates/uniffi-bindgen-alicorn/src/bindings/alicorn/code_types/: callback_interface.rs  compounds.rs  custom.rs  enum_.rs  miscellany.rs  object.rs  primitives.rs  record.rs
rust/uniffi/crates/uniffi-bindgen-alicorn/src/bindings/alicorn/templates/: Async.alc  Helpers.alc  NamespaceLibraryTemplate.alc  TopLevelFunctionTemplate.alc  Types.alc  macros.alc  wrapper.alc
rust/uniffi/crates/uniffi-bindgen-alicorn/src/scaffolding/: mod.rs
rust/uniffi/crates/uniffi-bindgen-alicorn/src/scaffolding/templates/: macros.rs
rust/uniffi/crates/uniffi-bindgen-alicorn/src/scaffolding/templates/alicorn/: scaffolding_template.alc  scaffolding_template.rs
rust/uniffi/crates/uniffi-build-alicorn/: Cargo.toml
rust/uniffi/crates/uniffi-build-alicorn/src/: lib.rs
rust/uniffi/crates/uniffi-macros-alicorn/: Cargo.toml
rust/uniffi/crates/uniffi-macros-alicorn/src/: lib.rs  setup_alicorn_scaffolding.rs  test.rs  util.rs
rust/uniffi/examples/arithmetic/: Cargo.toml  build.rs
rust/uniffi/examples/arithmetic/src/: arithmetic.udl  lib.rs
rust/uniffi/examples/arithmetic/tests/: test_generated_bindings.rs
rust/uniffi/examples/calculator/: Cargo.toml  build.rs  uniffi.toml
rust/uniffi/examples/calculator/src/: calculator.udl  lib.rs  main.rs
rust/uniffi/examples/calculator/tests/bindings/: test_arithmetic.kts  test_arithmetic.py  test_arithmetic.rb  test_arithmetic.swift
rust/uniffi/examples/uniffi-bindgen-cli/: Cargo.toml
test/: alicorn-smoketest.lua  metalanguage-smoketest.lua  runtest.lua  test-derive-eq.lua  test-derive-pretty-print.lua  test-eval.lua  test-fitsinto.lua  test-format-adapter.lua  test-map-array.lua  test-pretty-print.lua  test-syntax-to-terms-to-eval.lua  test-terms.lua  test-traits.lua  test-util.lua  testfile.alc
tests/: arith.alc  bad-types.alc  bare-params.alc  basic-annotated.alc  exponential-infer.alc  functypes.alc  host-if.alc  host-prog.alc  host-to-func.alc  http-server.alc  idk.alc  idk2.alc  implicit.alc  infix.alc  multi-implicit-bad.alc  multi-implicit.alc  operative-do.alc  operative-tuple-desc.alc  record-ascription.alc  record-dependency.alc  record-usage-1.alc  record-usage-2.alc  record-usage-3.alc  record-usage-4.alc  record-usage-5.alc  record-usage-6.alc  record-usage.alc  switch-fail.alc  switch-test.alc  test-failure.alc  test-glsl-frag.alc  test-glsl-vert.alc  test-success.alc  tuple-usage-1.alc  tuple-usage-2.alc  tuples.alc  unannotated-bad-constraint.alc
tests/record-types/: dependent-field.alc  incompatible-type.alc  missing-field.alc
types/: .value.lua.swp  anchored_inferrable.lua  binding.lua  block_purity.lua  checkable.lua  constraintcause.lua  constraintelem.lua  continuation.lua  edgenotif.lua  effect_id.lua  expression_goal.lua  flex_continuation.lua  flex_value.lua  free.lua  inferrable.lua  neutral_value.lua  placeholder_debug.lua  purity.lua  result_info.lua  spanned_name.lua  strict_continuation.lua  strict_value.lua  stuck_continuation.lua  stuck_value.lua  tristate.lua  typed.lua  unanchored_inferrable.lua  value.lua  var_debug.lua  visibility.lua
