# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[workspace]
members = [
	"rust/uniffi/crates/*",
	"rust/uniffi/examples/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.77.0"
license = "Apache-2.0"
homepage = "https://github.com/Fundament-Software/Alicorn0"
repository = "https://github.com/Fundament-Software/Alicorn0"

[workspace.dependencies]
alicorn = { path = "." }
mlua = { version = "0.10", features = ["luajit52", "vendored"] }
uniffi = { version = "0.29.0" }
uniffi_bindgen = { version = "=0.29.0" }
uniffi_build = { version = "=0.29.0" }
uniffi_meta = { version = "=0.29.0" }
uniffi_testing = { version = "=0.29.0" }
uniffi_udl = { version = "=0.29.0" }
uniffi-alicorn = { path = "./rust/uniffi/crates/uniffi-alicorn" }
uniffi-bindgen-alicorn = { path = "./rust/uniffi/crates/uniffi-bindgen-alicorn", default-features = false }
uniffi-build-alicorn = { path = "./rust/uniffi/crates/uniffi-build-alicorn" }
uniffi-macros-alicorn = { path = "./rust/uniffi/crates/uniffi-macros-alicorn" }

[package]
name = "alicorn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Rust embedding of the Alicorn compiler
"""
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["compiler"]
license.workspace = true
links = "alicorn"

[lib]
path = "lib.rs"
doctest = false

[dependencies]
mlua = { workspace = true }

[build-dependencies]
mlua = { workspace = true }
cc = "1.1"
