# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "uniffi-bindgen-alicorn"
version = "0.1.0"
description = "An Alicorn bindings generator for Rust using UniFFI (codegen and CLI tooling)"
homepage.workspace = true
repository.workspace = true
license = "MPL-2.0"
authors = [
    "Dusk Banks <me@bb010g.com>",
]
edition.workspace = true
rust-version.workspace = true
keywords = ["ffi", "bindgen", "alicorn"]
readme = "README.md"

[features]
default = [
    "cargo-metadata",
]
doc = []

bindgen-tests = ["cargo-metadata", "dep:uniffi_testing"]
cargo-metadata = ["dep:cargo_metadata"]
ffi-trace = ["uniffi_testing?/ffi-trace"]

[dependencies]
anyhow = "1"
rinja = { version = "0.3.4", default-features = false, features = ["config"] }
camino = "1.0.8"
cargo_metadata = { version = "0.15", optional = true }
fs-err = "2.7.0"
glob = "0.3"
goblin = "0.8"
heck = "0.5"
once_cell = "1.12"
paste = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
uniffi_bindgen = { workspace = true }
uniffi_meta = { workspace = true }
# uniffi-meta-alicorn = { workspace = true }
uniffi_testing = { workspace = true, optional = true }
# uniffi-testing-alicorn = { workspace = true, optional = true }
uniffi_udl = { workspace = true }
# Don't include the `unicode-linebreak` or `unicode-width` since that functionality isn't needed for
# docstrings.
textwrap = { version = "0.16", features = ["smawk"], default-features = false }

[lints.rust]
unexpected_cfgs.level = "warn"
unexpected_cfgs.check-cfg = [
    'cfg(rust_analyzer)',
]
